fixed github icon overlap

--- a/docs/_sass/custom.scss
+++ b/docs/_sass/custom.scss
@@ -59,7 +59,10 @@ figcaption{
 .link-box{
     margin-left: auto;
     margin-right: 22.5%;
-    margin-top: 2%;
+    margin-top: 24px;   /* svg is fixed pixel size, so top margin needs to be fixed size too */
+    @media(max-width: 1000px){
+        margin-right: 5%;
+    }
     transform: scale(3);
 }
 
